// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custon scroll list 1`] = `
"<view class=\\"vin-noticebar\\">
  <!--v-if-->
  <!--v-if-->
</view>"
`;

exports[`icon custom 1`] = `
"<view class=\\"vin-noticebar\\">
  <view class=\\"vin-noticebar-page\\" style=\\"color: rgb(249, 145, 27);\\">
    <view class=\\"left-icon\\" style=\\"background-image: url(https://img13.360buyimg.com/imagetools/jfs/t1/72082/2/3006/1197/5d130c8dE1c71bcd6/e48a3b60804c9775.png);\\">
      <!--v-if-->
    </view>
    <view class=\\"wrap wrap15912\\">
      <view class=\\"content content15912\\" style=\\"animation-delay: 1s; animation-duration: 0s; transform: translateX(0);\\"><a href=\\"http://vingogo.cn/docs/index.html\\">VinUI</a></view>
    </view>
    <!--v-if-->
  </view>
  <!--v-if-->
</view>"
`;

exports[`vertical scroll 1`] = `
"<view class=\\"vin-noticebar\\">
  <!--v-if-->
  <view class=\\"vin-noticebar-vertical\\" style=\\"color: rgb(249, 145, 27); height: 40px;\\">
    <!-- <template v-if=\\"slots.default\\">
        <view class=\\"horseLamp_list\\" :style=\\"horseLampStyle\\">
          <view
            v-for=\\"(item, index) in scrollList\\"
            v-bind:key=\\"index\\"
            :style=\\"{ height: height + 'px', 'line-height': height + 'px' }\\"
            :item=\\"item\\"
          >
            <ScrollItem
              v-for=\\"(item, index) in scrollList\\"
              :key=\\"index\\"
              :style=\\"{ height: height + 'px', 'line-height': height + 'px' }\\"
              :item=\\"item\\"
            ></ScrollItem>
          </view>
        </view>
      </template>

      <template v-else> -->
    <ul class=\\"horseLamp_list\\">
      <li class=\\"horseLamp_list_item\\">惊喜红包免费领</li>
      <li class=\\"horseLamp_list_item\\">爆款准点秒</li>
      <li class=\\"horseLamp_list_item\\">买超值优惠</li>
      <li class=\\"horseLamp_list_item\\">赢百万京豆</li>
    </ul><!-- </template> -->
    <view class=\\"go\\">
      <!--v-if-->
    </view>
  </view>
</view>"
`;
